--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodemongodb",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is a basic create, read, update, delete (CRUD) operations example in Node.js (Express) and MongoDB.",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.17.1",
     "helmet": "^3.21.0",
     "mongodb": "^3.3.2",
